--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/vim,gradle,eclipse,intellij+all
+
+# never commit gradle.properties, it contains secrets
+gradle.properties
